--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ a:hover, a:focus, a:active {
 }
 
 .button-main {
-  color: #3dccce;
+  color: #fff;
   background-color: #3a8268;
   margin-right: 1.5rem;
 }
@@ -256,7 +256,7 @@ a:hover, a:focus, a:active {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(61, 204, 206, 0.9);
+  background: rgba(255, 255, 255, 0.6);
 }
 
 /* Background Images */
